testsuite/tests/annotations/should_fail/annfail10.stderr

annfail10.hs:9:1: error: [GHC-39999]
    • Ambiguous type variable ‘a0’ arising from an annotation
      prevents the constraint ‘(GHC.Internal.Data.Data.Data
                                  a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance (GHC.Internal.Data.Data.Data a,
                  GHC.Internal.Data.Data.Data b) =>
                 GHC.Internal.Data.Data.Data (Either a b)
          -- Defined in ‘GHC.Internal.Data.Data’
        instance GHC.Internal.Data.Data.Data Ordering
          -- Defined in ‘GHC.Internal.Data.Data’
        ...plus 17 others
        ...plus 49 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the annotation: {-# ANN f Nothing #-}
